name:                library-evac
version:             0.1.0.0
copyright:           (c) 2014 Harry Garrood
license:             MIT
license-file:        LICENSE
author:              Harry Garrood
maintainer:          harry@garrood.me
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable library-evac
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       GameState,
                       Types,
                       Player,
                       Zipper,
                       Floor,
                       Geometry
  build-depends:       base >=4.7 && <4.8,
                       netwire >= 5.0 && < 6.0
  default-language:    Haskell2010
